add exclude/include lists

--- a/src/ikl.web/ikl.web.Tests/ikl.web.Tests.csproj
+++ b/src/ikl.web/ikl.web.Tests/ikl.web.Tests.csproj
@@ -17,4 +17,13 @@
       <ProjectReference Include="..\Shared\ikl.web.Shared.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="test_exclude_list.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="test_include_list.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
